--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # App architecture and state management
+  get: ^4.6.6
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Networking
+  http: ^0.13.6
+
+  # UI
   cupertino_icons: ^1.0.2
+  fl_chart: ^0.63.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
